# FormulaFrenzy

./: CMakeLists.txt  Makefile  README.md
src/: FormulaManager.cpp  GameLogic.cpp  GamePlay.cpp  GameRenderer.cpp  GameUI.cpp  GridGenerator.cpp  Utilities.cpp  main.cpp
